syntax = "proto3";

import "status/status.proto";
import "gm/gm.proto";

option go_package = "api/ipm";

package ipm;

service PM {
    rpc PlayerCreate(PlayerCreateRequest)returns(PlayerCreateResponse){}
    rpc PlayerDelete(PlayerDeleteRequest)returns(PMDefaultResponse){}
    rpc PlayerList(PlayerListRequest)returns(PlayerListResponse){}
    rpc PlayerSignIn(PlayerSignInRequest)returns(PlayerSignInResponse){}
    rpc PlayerSignOut(PlayerSignOutRequest)returns(PMDefaultResponse){}
}

message PlayerCreateRequest {
    string pid = 1;
    string name = 2;
    string password = 3;
}

message PlayerCreateResponse {
    status.Status status = 1;
    PlayerInfo player = 2;
}

message PlayerDeleteRequest {
    string pid = 1;
}

message PlayerListRequest {
    string pid = 1;
}

message PlayerListResponse {
    status.Status status = 1;
    repeated PlayerInfo players = 2;
}

message PlayerInfo {
    string id = 1;
    string name = 2;
    string password = 3;
    string etag = 4;
    int64 port = 5;
    int64 pid = 6;
}

message PlayerSignInRequest {
    string pid = 1;
    string name = 2;
    string password = 3;
}

message PlayerSignInResponse{
    status.Status status = 1;
    int64 port = 2;
    string etag = 3;
}

message PlayerSignOutRequest {
    string pid = 1;
    string etag = 2;
}

service Player {
    rpc SyncInfo(PlayerInfo)returns(PlayerInfo){}
    rpc Stop(PlayerInfo)returns(PMDefaultResponse){}
    rpc Attach(AttachRequest)returns(PMDefaultResponse){}
    rpc Detach(DetachRequest)returns(PMDefaultResponse){}
    rpc GetMessage(GetMessageRequest)returns(GetMessageResponse){}
    rpc PutMessage(PutMessageRequest)returns(PMDefaultResponse){}
}

message AttachRequest {
    string etag = 1;
    string pid = 2;
    string gamePort = 3;
}

message DetachRequest {
    string etag = 1;
}

message GetMessageRequest {
    string etag = 1;
}

message GetMessageResponse {
    status.Status status = 1;
    igm.GameMessage gmsg = 2;
}

message PutMessageRequest {
    string etag = 1;
    igm.PlayerMessage pmsg = 2;
}

message PMDefaultResponse {
    status.Status status = 1;
}
